# evio-tauri-client

./: LICENSE  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  patch.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
